creating projects tab and sub tab

--- a/index.html
+++ b/index.html
@@ -123,6 +123,40 @@
                                         <li><a href="views/tables_dynamic.html">Table Dynamic</a>
                                         </li>
                                     </ul>
+                                </li>                               
+                                <li><a><i class="fa fa-desktop"></i> Projects <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: none">
+                                        <li><a>
+                                        Professional Projects
+                                        <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                        <ul class="nav child_menu" style="display: none">
+                                        <li><a href="views/general_elements.html">WebGL Damage Viewer</a></li>
+                                        <li><a href="views/generalelements.html">GoTime Driver App</a></li>
+                                        <li><a href="views/generalelements.html">MBE Support Site</a></li>
+                                        </ul>
+                                        </li>
+                                        <li><a href="views/media_gallery.html">Personal Projects
+                                        <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                        <ul class="nav child_menu" style="display: none">
+                                        <li><a hred="views/general_elements.html">Blood Pressure Measuring App</a></li>
+                                        <li><a href="views/media_galley.html">Alicia's Android App</a></li>
+                                        </li> 
+                                        </ul>                       
+                                        <li><a href="views/icons.html">Icons</a>
+                                        </li>
+                                        <li><a href="views/glyphicons.html">Glyphicons</a>
+                                        </li>
+                                        <li><a href="views/widgets.html">Widgets</a>
+                                        </li>
+                                        <li><a href="views/invoice.html">Invoice</a>
+                                        </li>
+                                        <li><a href="views/inbox.html">Inbox</a>
+                                        </li>
+                                        <li><a href="views/calender.html">Calender</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
