formatting nav bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Alicia Guerra </title>
+    <title>Alicia Isabel Guerra </title>
 
     <!-- Bootstrap core CSS -->
 
@@ -42,17 +42,27 @@
 
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
-
-                    <div class="navbar nav_title" style="border: 0;">
-                         <img src="images/img.jpg" alt="..." class="img-circle profile_img"> 
+                       <div class="navbar nav_title" style="border: 0;">
+                        <a href="index.html" class="site_title"><span>Alicia Isabel Guerra</span></a>
                     </div>
                     <div class="clearfix"></div>
+                   
+                     <!-- menu proile quick info -->
+                    <div class="profile">
+                        <div class="profile_pic">
+                            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                        </div>
+                        <div class="profile_info">
+                            <span>You are Logged Into</span>
+                            <h2>AliciaGuerra.com</h2>
+                        </div>
+                    </div>
+                    <!-- /menu profile quick info -->
                     <br />
 
                     <!-- sidebar menu -->
-                    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-
-                        <div class="menu_section">                           
+                    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">                      
+                        <div class="menu_section">                        
                             <ul class="nav side-menu">
                                 <li><a><i class="fa fa-home"></i> Home </a>
                                 </li>                               
@@ -109,19 +119,7 @@
                                         <li><a hred="views/general_elements.html">Blood Pressure Measuring App</a></li>
                                         <li><a href="views/media_galley.html">Alicia's Android App</a></li>
                                         </li> 
-                                        </ul>                       
-                                        <li><a href="views/icons.html">Icons</a>
-                                        </li>
-                                        <li><a href="views/glyphicons.html">Glyphicons</a>
-                                        </li>
-                                        <li><a href="views/widgets.html">Widgets</a>
-                                        </li>
-                                        <li><a href="views/invoice.html">Invoice</a>
-                                        </li>
-                                        <li><a href="views/inbox.html">Inbox</a>
-                                        </li>
-                                        <li><a href="views/calender.html">Calender</a>
-                                        </li>
+                                        </ul>                                                        
                                     </ul>
                                 </li>                                 
                                  <li><a><i class="fa fa-pencil-square"></i> Blog <span class="fa fa-chevron-down"></span></a>
