fixing send from messages

--- a/Theme/index.html
+++ b/Theme/index.html
@@ -681,7 +681,7 @@ height="1">
 	      		<dtitle>Fast Contact</dtitle>
 	      		<hr>
 	      		<div class="cont">
-                	<form action="#get-in-touch" method="POST" id="contact">
+                	<form  id="contact">
                     	<input type="text" id="contactname" name="contactname" placeholder="Name">
                     	<input type="text" id="email" name="email" placeholder="Email">
                     	<div class="textarea-container"><textarea id="message" name="message" placeholder="Message"></textarea></div>
