--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@ $(document).ready(function () {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img height="30px" width="30px" class="img-circle" src="assets/img/mypic2.jpg" alt="">Alicia Isabel Guerra</a>
+          <a class="navbar-brand" href="index.html"><img height="30px" width="50px" class="img-circle" src="assets/img/mypic2.jpg" alt="">
+          <IMG  width="250px" height="50px"
+SRC="http://blog.flamingtext.com/blog/2014/07/07/flamingtext_com_1404775305_1005121091.gif">
+          </a>
         </div> 
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -140,7 +143,7 @@ $(document).ready(function () {
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		                        General
+		                        General Info
 		                        </a>
 		                    </div>
 		                    <div id="collapseOne" class="accordion-body collapse in">
@@ -155,7 +158,7 @@ $(document).ready(function () {
 		                <div class="accordion-group">
 		                    <div class="accordion-heading">
 		                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		                        Professional
+		                        Professional Info
 		                        </a>
 		                    </div>
 		                    <div id="collapseTwo" class="accordion-body collapse">
