--- a/index.html
+++ b/index.html
@@ -696,10 +696,10 @@ height="1">
 				
  	  		<!-- MODAL BLOCK -->     
 				<div class="half-unit">
-	      		<dtitle>Modal</dtitle>
+	      		<dtitle>Contact Info</dtitle>
 	      		<hr>
 		            <div class="cont">
-		                <a href="#myModal" role="button" class="btnnew" data-toggle="modal">Example Modal Window</a>
+		                <a href="#myModal" role="button" class="btnnew" data-toggle="modal">See Contact Information</a>
 		            </div>
 				</div>
 			</div>
@@ -709,10 +709,14 @@ height="1">
 			      <div class="modal-content">
 			        <div class="modal-header">
 			          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			          <h4 class="modal-title">Modal title</h4>
+			          <h4 class="modal-title">Contact Information</h4>
 			        </div>
 			        <div class="modal-body">
-			          ...
+			         Alicia I. Guerra <br>
+			         PO Box 122893 <br>
+			         San Diego, CA 92112 <br>
+			         (619) 519-3805 <br>
+			         alicia.developer@aliciaguerra.com
 			        </div>
 			        <div class="modal-footer">
 			          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
